#####################
Nagios 2.x Change Log
#####################


2.11 - 11/??/2007
-----------------
* Better error logging when failing to rename/move files
* Possible fix for Unicode html encoding errors in CGIs
* Fix for encoding HTML characters in CGIs
* Fix for a potential cross site scripting vulnerability in the CGIs



2.10 - 10/21/2007
------------------
* Added 'make install-webconf' command to install Apache web config file
* Sample config files are now installed without a -sample extension
* Fix for SIGTERMs being seen as SIGEXITs, non-logging of SIGTERMs/shutdowns
* Minor fix for notification timeout log messages
* Fix for not logging passive host check results
* Minor bug fixes in CGIs
* Fix for a segfault when processing passive host check results with empty output/perfdata
* Fix for incorrect latency calculation for passive service checks
* Bug fix with attempting to access an uninitalized mutex if external commands are disabled
* Fix for keeping service checks in the event queue when active service checks are disabled globally
* Fix for a potential cross site scripting vulnerability in the CGIs
* Program version is now displayed in CGIs



2.9 - 04/10/2007
----------------
* Fix for incorrect performance data file write/append mode options
* Fix for current status of hosts with no host check command defined
* SIGSEGV signals should now be logged again (broken in 2.8)
* Configure script fix for no mail program found/installed on system
* Configure script option bug fixes for cygwin and embedded perl
* Command definitions and host/service plugin perfdata with HTML should now be escaped in CGIs
* Patch for incorrect time down percentage in availability CGI
* Updated init script to fix a race condition during restarts



2.8 - 03/08/2007
------------------
* Bug fix for calculating notification interval with service escalations
* Bug fix for using servicegroups in service dependency definitions
* Bug fix for bad date format submission in command CGI